--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   ############################################
   neo4j:
     image: neo4j:latest
-    container_name: neo4j
+    container_name: neo4j_dev
     volumes:
       - ./neo4j/logs:/logs
       - ./neo4j/config:/config
       - ./neo4j/data:/data
       - ./neo4j/plugins:/plugins
-      - ./neo4j/backup:/backup        # <- store dumps here
+      - ./neo4j/backup:/backup # <- store dumps here
     environment:
       - NEO4J_AUTH=neo4j/password
     ports:
@@ -23,7 +23,7 @@ services:
   ############################################
   neo4j-admin:
     image: neo4j:latest
-    profiles: [admin]      # opt-in service
+    profiles: [admin] # opt-in service
     working_dir: /var/lib/neo4j
     environment:
       - NEO4J_HOME=/var/lib/neo4j
