--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "dotenv": "^16.5.0",
     "dotenv-expand": "^12.0.2",
     "figlet": "^1.8.1",
-    "inquirer": "^12.6.3",
     "nanospinner": "^1.2.2",
-    "neo4j-driver": "^5.28.1"
+    "neo4j-driver": "^5.28.1",
+    "prompts": "^2.4.2"
   }
 }
